--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "🗂 Web Design System for &amp;Samhoudmedia",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:sass": "sass src/main.scss build/main.css"
   },
   "repository": {
     "type": "git",
