--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "🗂 Web Design System for &amp;Samhoudmedia",
   "main": "index.js",
   "scripts": {
-    "build:sass": "sass src/main.scss build/main.css",
-    "lint:sass": "stylelint '**/*.scss'"
+    "sass:build": "node-sass src/main.scss -o build",
+    "sass:watch": "npm run sass:build && node-sass src/main.scss -wo build"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/samhoudmedia/system-sam#readme",
   "dependencies": {
-    "sass": "^1.3.0",
+    "node-sass": "^4.9.0",
+    "nodemon": "^1.17.3",
     "stylelint": "^9.2.0",
     "stylelint-config-recommended": "^2.1.0"
   }
