Add browser-sync server

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "sass:build": "node-sass src/main.scss -o build",
-    "sass:watch": "npm run sass:build && node-sass src/main.scss -wo build"
+    "sass:watch": "npm run sass:build && node-sass src/main.scss -wo build",
+    "sass:server": "browser-sync start -s -f ."
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,8 @@
     "url": "https://github.com/samhoudmedia/system-sam/issues"
   },
   "homepage": "https://github.com/samhoudmedia/system-sam#readme",
-  "dependencies": {
+  "devDependencies": {
+    "browser-sync": "^2.24.1",
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.3",
     "stylelint": "^9.2.0",
